ui/src/main/css/app.css
/* ... */
:root {
    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
    line-height: 1.5;
    font-weight: 400;

    color-scheme: light dark;
    color: $gray-lighter;
    background-color: $bg-color;
    border: none;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%;

    scrollbar-color: $teal-dark $gray-dark;
}

[popover] {
    margin: 0;
    padding: 0;
    border: 0;
}

button {
    padding: 2px;
    color: $gray-lightest;
}

table {
    border-collapse: collapse;
}

input, textarea, select, button {
    color: $gray-lightest;
    background-color: $gray-darker;
}

span, div, i, p, h1, h2, h3, label {
    color: $gray-lightest;
    user-select: none;
}

/* dialogs TODO move elsewhere */


h2.dialog-header {
    font-size: 1.2em;
    margin: 0;
    text-align: center;
}

/* character */


/* map modal */

dialog {
    padding: 0;
    border: 1px solid #888; /* fixme */
    background-color: $gray-darker;
    width: 80%;
    overflow: auto;
}

dialog::backdrop {
    opacity: 0.75;
    background-color: black;
    padding: 0;
    margin: 0;
}

.modal-content {
    padding: 3px;
    margin: 0;
}

.close {
    color: $red;
    float: right;
    font-size: 2em;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: $orange-light;
    text-decoration: none;
    cursor: pointer;
}

/* map page */
#map-view-inner {
    display: flex;
    flex-flow: row wrap;
}

#map-view-inner > * {
    flex: 1 100%;
}

@media all {
    #map-parent { min-width: 600px; flex: 4 1 auto; order: 3; }
    #map-left-sidebar { width: 28em; min-width: 380px; flex: 0 1 auto; order: 2; }
    #map-menu { flex: 1 100%; order: 1; }
}


/* map grid */
$box-width:     140px;
$box-height:    40px;

#map-menu {

}

#map-left-sidebar {
    margin-left: 3px;
    margin-right: 3px;
}

#map-parent {
    min-height: max(800px, 60vh);
    overflow: auto;
    box-sizing: content-box;
    /* material design corners - TODO need to templatise this */
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    border: 1px solid $gray-darker;
    border-radius: 5px;

    background-color: $gray-darker;

    margin-left: 2px;

    anchor-name: --map-parent;
}

/* TODO removed as wasn't sure this is needed!? */
#map-inner {
    position: relative;
    transform-origin: top left;
    box-sizing: content-box;
    height: 100%;
    width: 100%;
    z-index: 1;

    /* TODO: read about transform-origin */
    /*transform: scale(50%);*/
    /*transform-origin: 0 0 0;*/

    & svg {
        z-index: -1;
    }
}

/* TODO - combine the css here */
.system-error {
    width: $box-width;
    height: $box-height;
    position: absolute;
    user-select: none;
}

.system {
    user-select: none;
    width: $box-width;
    height: $box-height;
    position: absolute;
    box-sizing: border-box; /* important otherwise we need to do math for the border calculation*/
    box-snap: block-start;
}

.draggable-box {
    cursor: move;
}

.pinned-box {
    cursor: pointer;
    /*cursor: not-allowed; !* TODO not sure whether this is good *!*/
}

.system {
    font-family: Oxygen, Arial, sans-serif;
    font-weight: 700;
    font-size: 0.75em;
    background-color: $gray-dark;
    border-radius: 5px;
    /*transition: .5s linear;*/
}

.system:hover:not(.system-selected) {
    /*background-color: turquoise;*/
    box-shadow: 0px 9px 30px rgba($orange, 0.1);
    /*box-shadow: 0px 0px 100px 0px rgba(255,165,0,1);*/
    /*transition: .5s linear;*/
}

.system-selected {
    /* TODO adjust color effect */
    box-shadow: 0px 0px 5px 0px rgba($orange,0.7) inset;
    /*box-shadow: 2px 2px 2px 2px rgba($teal, .45), 1px 1px 1px 1px rgba($teal, .45);*/
    /*box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.16), 0px 0px 0px 3px rgba(51, 51, 51,1);*/
}

.system-selected-bulk {
    background-color: $red-darkest;
}


.system-class-h {
    color: $green;
}

.system-class-c1, .system-class-c2, .system-class-shatteredfrig {
    color: $blue;
}

.system-class-l, .system-class-c3, .system-class-c4 {
    color: $orange;
}

.system-class-ns, .system-class-c5, .system-class-c6 {
    color: $red;
}

.system-class-pochven, .system-class-void, .system-class-abyssal20, .system-class-abyssal21, .system-class-abyssal22, .system-class-abyssal22 {
    color: $red-dark;
}

.system-class-thera {
    color: $yellow;
}

.system-class-sentineldrifter, .system-class-barbicandrifter, .system-class-videttedrifter, .system-class-confluxdrifter, .system-class-videttedrifter  {
    color: $teal;
}


span.wormhole-connection-option {
    margin: 1px 0 1px 0;
}

td.signature-type {
    /* FIXME why a div and lowercase ... */
    & div[data-wormhole-type="unknown"] {
        color: $red;
        text-decoration: $red-dark dotted underline;
    }
}

td.signature-target {
    & span[data-connection-type="Unknown"] {
        color: $red;
        text-decoration: $red-dark dotted underline;
    }

    & span.wormhole-eol {
        /* FIXME duplication */
        border-top: 2px solid $pink-dark;
        border-bottom: 2px solid $pink-dark;
    }
}

span.connection-system-name {
    padding-left: 2px;
    padding-right: 2px;
}

span:not(.wormhole-eol) > span.connection-system-name {
    border-top: 2px $gray-light solid;
    border-bottom: 2px $gray-light solid;
}

mark.system-effect {
    background: inherit;

}

mark.system-pin-status {
    margin-top: 2px;
    color: $gray-lighter;
}



mark.system-shattered {
    margin-top: 2px;
    color: $blue;
}

.system-effect-magnetar {
    color: $wh-color-magnetar;
}

.system-effect-blackhole {
    color: $wh-color-blackhole;
}

.system-effect-redgiant {
    color: $wh-color-redgiant;
}

.system-effect-pulsar {
    color: $wh-color-pulsar;
}

.system-effect-cataclysmic {
    color: $wh-color-cataclysmic;
}

.system-effect-wolfrayet {
    color: $wh-color-wolfrayet;
}
/* ... */

